@@ -1399,6 +1399,7 @@ sub get_basic_input_elements
 	my $size = ( $maxlength > $self->{input_cols} ?
 					$self->{input_cols} : 
 					$maxlength );
+
 	my $input = $session->render_noenter_input_field(
 		class=>"ep_form_text",
 		name => $basename,
